Update Node.js and npm version requirements in package-lock.json; modify CI workflows for integration tests and badge updates

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -38,7 +38,7 @@ jobs:
           DATABASE_PATH: ":memory:"
       
       - name: Run integration tests
-        run: node --test tests/plugins.integration.test.mjs
+        run: node --test tests/integration.test.js
   
   build:
     name: Build All Packages
