--- a/.github/workflows/update-badges.yml
+++ b/.github/workflows/update-badges.yml
@@ -15,7 +15,7 @@ jobs:
   update-badges:
     name: Update Dynamic Badges
     runs-on: ubuntu-latest
-    if: ${{ github.event.workflow_run.conclusion == 'success' }}
+    if: always()
     
     steps:
       - name: Checkout code
@@ -27,11 +27,19 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
           cache: 'npm'
+          cache-dependency-path: 'package-lock.json'
       
       - name: Install dependencies
         run: npm ci
+      
+      - name: Get CI workflow status
+        id: ci_status
+        run: |
+          STATUS="${{ github.event.workflow_run.conclusion }}"
+          echo "status=$STATUS" >> $GITHUB_OUTPUT
+          echo "CI Workflow Status: $STATUS"
       
       - name: Run tests and collect metrics
         id: test_metrics
@@ -61,12 +69,14 @@ jobs:
           REPO_NAME="${{ github.event.repository.name }}"
           TESTS="${{ steps.test_metrics.outputs.tests_passing }}"
           COVERAGE="${{ steps.test_metrics.outputs.coverage }}"
+          CI_STATUS="${{ steps.ci_status.outputs.status }}"
           
           # Update README.md with dynamic values
           sed -i "s/tests-[0-9]*%20passing/tests-${TESTS}%20passing/g" README.md
           sed -i "s/coverage-[0-9]*%25/coverage-${COVERAGE}%25/g" README.md
           
           echo "✓ Updated badges in README.md"
+          echo "✓ CI Status: $CI_STATUS"
       
       - name: Check for changes
         id: check_changes
