chore: update Node.js version to 20.x in CI workflows and added missing test scripts.

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -7,7 +7,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Tests not implemented yet\" && exit 0"
+    "test": "node --test tests/"
   }
 }
 
