--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -20,8 +20,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
           cache: 'npm'
+          cache-dependency-path: 'package-lock.json'
       
       - name: Install dependencies
         run: npm ci
@@ -35,7 +36,12 @@ jobs:
           DATABASE_PATH: ":memory:"
       
       - name: Run integration tests
-        run: node --test tests/plugins.integration.test.mjs
+        run: node --test tests/integration.test.js
+        env:
+          DISCORD_BOT_TOKEN: test_token
+          DISCORD_CLIENT_ID: test_client_id
+          DISCORD_CLIENT_SECRET: test_secret
+          DATABASE_PATH: ":memory:"
 
   security-scan:
     name: Security Scan for Release
@@ -49,8 +55,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
           cache: 'npm'
+          cache-dependency-path: 'package-lock.json'
       
       - name: Install dependencies
         run: npm ci
@@ -90,8 +97,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
           cache: 'npm'
+          cache-dependency-path: 'package-lock.json'
       
       - name: Install dependencies
         run: npm ci
