--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "dev": "node --env-file=../../.env --watch src/index.js",
     "start": "node --env-file=../../.env src/index.js",
-    "test": "node --env-file=../../.env --test tests/",
-    "test:watch": "node --env-file=../../.env --test --watch tests/"
+    "test": "node --test tests/",
+    "test:watch": "node --test --watch tests/"
   },
   "dependencies": {
     "discord.js": "^14.14.1",
