feat: complete CI/CD pipeline and comprehensive test suite
?? CI/CD Pipeline:
- Complete GitHub Actions workflows for CI, security, and releases
- Automated release process with version bumping scripts
- Dependabot configuration for all packages and GitHub Actions
- Dynamic badge updates and comprehensive documentation

?㎦ Testing:
- Implemented comprehensive test suite with 99+ tests
- Added shared package tests (Logger and Plugin Types)
- Fixed all test failures and integration issues
- Added proper environment variable handling for CI

?뵏 Security:
- CodeQL SAST, Trivy, npm audit, and OSSF Scorecard scanning
- Security reports generation and automated scanning
- Plugin sandbox isolation and input validation

?벀 Dependencies:
- Updated to Node.js 20.x for better compatibility
- Fixed package-lock.json and dependency management
- Proper monorepo caching and workspace configuration

?렞 Features:
- Visual node-based Discord bot plugin creation
- React dashboard with modern UI and mobile support
- Plugin management system with database persistence
- Sandbox execution environment for plugin safety
- Comprehensive logging and type definitions

Version: 0.0.2

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dismodular.js",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "DisModular.js - A professional modular Discord bot framework with visual node-based plugin creation",
   "author": "fkndean_",
   "license": "MIT",
@@ -20,14 +20,18 @@
     "setup:db": "node packages/api/scripts/setup-db.js",
     "kill-ports": "node scripts/kill-ports.js",
     "lint": "npm run lint --workspaces",
-    "test": "npm run test --workspaces"
+    "test": "npm run test --workspaces",
+    "release": "node scripts/bump-version.js",
+    "release:patch": "node scripts/bump-version.js patch",
+    "release:minor": "node scripts/bump-version.js minor",
+    "release:major": "node scripts/bump-version.js major"
   },
   "devDependencies": {
     "concurrently": "^8.2.2"
   },
   "engines": {
-    "node": ">=18.0.0",
-    "npm": ">=9.0.0"
+    "node": ">=20.0.0",
+    "npm": ">=10.0.0"
   },
   "dependencies": {
     "@aashari/nodejs-geocoding": "^2.7.2",
