--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -60,8 +60,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
           cache: 'npm'
+          cache-dependency-path: 'package-lock.json'
       
       - name: Install dependencies
         run: npm ci
@@ -93,11 +94,11 @@ jobs:
           persist-credentials: false
       
       - name: Run OSSF Scorecard
-        uses: ossf/scorecard-action@v2
+        uses: ossf/scorecard-action@v2.4.0
         with:
           results_file: results.sarif
           results_format: sarif
-          publish_results: true
+          publish_results: false
       
       - name: Upload SARIF results
         uses: github/codeql-action/upload-sarif@v3
@@ -115,8 +116,9 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
           cache: 'npm'
+          cache-dependency-path: 'package-lock.json'
       
       - name: Install dependencies
         run: npm ci
