feat: enhance Docker setup with environment variable support for Vite
- Updated docker-compose.yml to pass VITE_API_URL and VITE_DISCORD_CLIENT_ID as build arguments.
- Modified Dockerfile to accept and set environment variables for Vite build configuration, improving flexibility for deployment.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,11 @@ services:
       - dismodular-network
 
   app:
-    build: .
+    build:
+      context: .
+      args:
+        VITE_API_URL: ${VITE_API_URL:-https://dismodular.pulsecord.app/api}
+        VITE_DISCORD_CLIENT_ID: ${VITE_DISCORD_CLIENT_ID:-your_client_id_here}
     container_name: dismodular-app
     restart: unless-stopped
     depends_on:
