--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI - Test & Build
+name: CI
 
 on:
   push:
@@ -8,100 +8,90 @@ on:
 
 jobs:
   test:
-    name: Run Tests
     runs-on: ubuntu-latest
     
-    strategy:
-      matrix:
-        node-version: [20.x]
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Setup Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'npm'
-          cache-dependency-path: 'package-lock.json'
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Run tests
-        run: npm test
+    services:
+      postgres:
+        image: postgres:16-alpine
         env:
-          DISCORD_BOT_TOKEN: test_token
-          DISCORD_CLIENT_ID: test_client_id
-          DISCORD_CLIENT_SECRET: test_secret
-          DATABASE_PATH: ":memory:"
-      
-      - name: Run integration tests
-        run: node --test tests/integration.test.js
-  
-  build:
-    name: Build All Packages
-    runs-on: ubuntu-latest
-    needs: test
-    
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20.x
-          cache: 'npm'
-          cache-dependency-path: 'package-lock.json'
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Verify API package
-        run: |
-          echo "Verifying API package structure..."
-          cd packages/api
-          node -e "import('./src/index.js').then(() => console.log('✓ API package verified')).catch(e => { console.error('✗ API verification failed:', e.message); process.exit(1); })" || echo "API check skipped (requires env vars)"
-        env:
-          DISCORD_BOT_TOKEN: test_token
-          DISCORD_CLIENT_ID: test_id
-          DISCORD_CLIENT_SECRET: test_secret
-          DATABASE_PATH: ":memory:"
-      
-      - name: Verify Bot package  
-        run: |
-          echo "Verifying Bot package structure..."
-          cd packages/bot
-          node -e "console.log('✓ Bot package structure verified')"
-      
-      - name: Build dashboard
-        run: npm run build --workspace=@dismodular/dashboard
-      
-      - name: Verify dashboard build
-        run: |
-          if [ ! -d "packages/dashboard/dist" ]; then
-            echo "✗ Dashboard build failed - dist folder not found"
-            exit 1
-          fi
-          echo "✓ Dashboard built successfully"
-          ls -la packages/dashboard/dist
-      
-      - name: Upload dashboard build
-        uses: actions/upload-artifact@v4
-        with:
-          name: dashboard-build
-          path: packages/dashboard/dist/
-          retention-days: 7
-      
-      - name: Create build summary
-        run: |
-          echo "## Build Summary" >> $GITHUB_STEP_SUMMARY
-          echo "✅ API package verified" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Bot package verified" >> $GITHUB_STEP_SUMMARY
-          echo "✅ Dashboard built successfully" >> $GITHUB_STEP_SUMMARY
-          echo "" >> $GITHUB_STEP_SUMMARY
-          echo "### Dashboard Build Size" >> $GITHUB_STEP_SUMMARY
-          du -sh packages/dashboard/dist >> $GITHUB_STEP_SUMMARY
+          POSTGRES_DB: dismodular_test
+          POSTGRES_USER: dismodular
+          POSTGRES_PASSWORD: password
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
 
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'npm'
+    
+    - name: Install dependencies
+      run: npm ci
+    
+    - name: Setup test environment
+      run: |
+        echo "DATABASE_URL=postgresql://dismodular:password@localhost:5432/dismodular_test" >> $GITHUB_ENV
+        echo "TEST_DATABASE_URL=postgresql://dismodular:password@localhost:5432/dismodular_test" >> $GITHUB_ENV
+        echo "DISCORD_CALLBACK_URL=http://localhost:3002/auth/discord/callback" >> $GITHUB_ENV
+        echo "DISCORD_CLIENT_ID=test_client_id" >> $GITHUB_ENV
+        echo "DISCORD_CLIENT_SECRET=test_client_secret" >> $GITHUB_ENV
+        echo "DISCORD_BOT_TOKEN=test_bot_token" >> $GITHUB_ENV
+        echo "INITIAL_ADMIN_DISCORD_ID=189921902553202688" >> $GITHUB_ENV
+        echo "SESSION_SECRET=test_session_secret" >> $GITHUB_ENV
+        echo "NODE_ENV=test" >> $GITHUB_ENV
+    
+    - name: Generate Prisma Client
+      run: npx prisma generate
+    
+    - name: Run database migrations
+      run: npx prisma migrate deploy
+      env:
+        DATABASE_URL: postgresql://dismodular:password@localhost:5432/dismodular_test
+    
+    - name: Run tests
+      run: npm test
+      env:
+        DATABASE_URL: postgresql://dismodular:password@localhost:5432/dismodular_test
+        TEST_DATABASE_URL: postgresql://dismodular:password@localhost:5432/dismodular_test
+        DISCORD_CALLBACK_URL: http://localhost:3002/auth/discord/callback
+        DISCORD_CLIENT_ID: test_client_id
+        DISCORD_CLIENT_SECRET: test_client_secret
+        DISCORD_BOT_TOKEN: test_bot_token
+        INITIAL_ADMIN_DISCORD_ID: 189921902553202688
+        SESSION_SECRET: test_session_secret
+        NODE_ENV: test
+
+  build:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v4
+    
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'npm'
+    
+    - name: Install dependencies
+      run: npm ci
+    
+    - name: Build dashboard
+      run: npm run build --workspace=@dismodular/dashboard
+    
+    - name: Generate Prisma Client
+      run: npx prisma generate
+    
+    - name: Check build artifacts
+      run: |
+        ls -la packages/dashboard/dist/
+        test -f packages/dashboard/dist/index.html
