--- a/env.example
+++ b/env.example
@@ -18,9 +18,7 @@ API_PORT=3002
 API_URL=https://dismodular.pulsecord.app
 SESSION_SECRET=your_random_session_secret_here
 
-# Dashboard Configuration
-VITE_API_URL=https://dismodular.pulsecord.app/api
-VITE_DISCORD_OAUTH_CALLBACK=https://dismodular.pulsecord.app/api/auth/discord/callback
+# Note: VITE_API_URL and DISCORD_CALLBACK_URL are automatically derived from API_URL
 
 # Database Configuration (PostgreSQL)
 DATABASE_URL=postgresql://dismodular:password@postgres:5432/dismodular
