--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
     build:
       context: .
       args:
-        VITE_API_URL: ${VITE_API_URL:-https://dismodular.pulsecord.app}
-        VITE_DISCORD_CLIENT_ID: ${VITE_DISCORD_CLIENT_ID:-your_client_id_here}
+        VITE_API_URL: ${API_URL:-http://localhost:3002}
+        VITE_DISCORD_CLIENT_ID: ${DISCORD_CLIENT_ID:-your_client_id_here}
     container_name: dismodular-app
     restart: unless-stopped
     depends_on:
@@ -40,10 +40,11 @@ services:
       DISCORD_CLIENT_SECRET: ${DISCORD_CLIENT_SECRET:-your_client_secret_here}
       INITIAL_ADMIN_DISCORD_ID: ${INITIAL_ADMIN_DISCORD_ID:-your_discord_id_here}
       API_PORT: ${API_PORT:-3002}
-      API_URL: ${API_URL:-https://dismodular.pulsecord.app}
+      API_URL: ${API_URL:-http://localhost:3002}
       SESSION_SECRET: ${SESSION_SECRET:-your_random_session_secret_here}
-      VITE_API_URL: ${API_URL:-https://dismodular.pulsecord.app}
-      DISCORD_CALLBACK_URL: ${API_URL:-https://dismodular.pulsecord.app}/auth/discord/callback
+      VITE_API_URL: ${API_URL:-http://localhost:3002}
+      VITE_DISCORD_CLIENT_ID: ${DISCORD_CLIENT_ID:-your_client_id_here}
+      DISCORD_CALLBACK_URL: ${API_URL:-http://localhost:3002}/auth/discord/callback
       ENABLE_MESSAGE_CONTENT: ${ENABLE_MESSAGE_CONTENT:-false}
       ENABLE_GUILD_MEMBERS: ${ENABLE_GUILD_MEMBERS:-false}
       # Prisma configuration
