chore: add .npmrc configuration and update package dependencies
- Created a new `.npmrc` file to configure npm settings, including ignoring scripts in CI and setting the npm registry.
- Updated `package-lock.json` to include new dependencies: `lusca` and `tsscmp`.
- Added a prepare script in `package.json` for CI environments.
- Modified CI workflow to use a matrix strategy for Node.js versions and streamlined the installation process by ignoring scripts.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "packages/*"
   ],
   "scripts": {
+    "prepare": "echo 'Prepare script completed'",
     "dev": "concurrently \"npm run dev:bot\" \"npm run dev:api\" \"npm run dev:dashboard\"",
     "dev:bot": "npm run dev --workspace=@dismodular/bot",
     "dev:api": "npm run dev --workspace=@dismodular/api",
