--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,88 +10,56 @@ jobs:
   test:
     runs-on: ubuntu-latest
     
-    services:
-      postgres:
-        image: postgres:16-alpine
-        env:
-          POSTGRES_DB: dismodular_test
-          POSTGRES_USER: dismodular
-          POSTGRES_PASSWORD: password
-        options: >-
-          --health-cmd pg_isready
-          --health-interval 10s
-          --health-timeout 5s
-          --health-retries 5
-        ports:
-          - 5432:5432
-
-    steps:
-    - uses: actions/checkout@v4
+    strategy:
+      matrix:
+        node-version: [20.x, 21.x]
     
-    - name: Setup Node.js
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
+    - name: Setup Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v4
       with:
-        node-version: '20'
+        node-version: ${{ matrix.node-version }}
         cache: 'npm'
-    
+        
     - name: Install dependencies
-      run: npm ci
-    
-    - name: Setup test environment
-      run: |
-        echo "DATABASE_URL=postgresql://dismodular:password@localhost:5432/dismodular_test" >> $GITHUB_ENV
-        echo "TEST_DATABASE_URL=postgresql://dismodular:password@localhost:5432/dismodular_test" >> $GITHUB_ENV
-        echo "DISCORD_CALLBACK_URL=http://localhost:3002/auth/discord/callback" >> $GITHUB_ENV
-        echo "DISCORD_CLIENT_ID=test_client_id" >> $GITHUB_ENV
-        echo "DISCORD_CLIENT_SECRET=test_client_secret" >> $GITHUB_ENV
-        echo "DISCORD_BOT_TOKEN=test_bot_token" >> $GITHUB_ENV
-        echo "INITIAL_ADMIN_DISCORD_ID=189921902553202688" >> $GITHUB_ENV
-        echo "SESSION_SECRET=test_session_secret" >> $GITHUB_ENV
-        echo "NODE_ENV=test" >> $GITHUB_ENV
-    
-    - name: Generate Prisma Client
-      run: npx prisma generate
-    
-    - name: Run database migrations
-      run: npx prisma migrate deploy
-      env:
-        DATABASE_URL: postgresql://dismodular:password@localhost:5432/dismodular_test
-    
+      run: npm ci --ignore-scripts
+      
+    - name: Run linting
+      run: npm run lint
+      
     - name: Run tests
       run: npm test
+      
+    - name: Run integration tests
+      run: npm run test:integration
       env:
-        DATABASE_URL: postgresql://dismodular:password@localhost:5432/dismodular_test
-        TEST_DATABASE_URL: postgresql://dismodular:password@localhost:5432/dismodular_test
-        DISCORD_CALLBACK_URL: http://localhost:3002/auth/discord/callback
-        DISCORD_CLIENT_ID: test_client_id
-        DISCORD_CLIENT_SECRET: test_client_secret
-        DISCORD_BOT_TOKEN: test_bot_token
-        INITIAL_ADMIN_DISCORD_ID: 189921902553202688
-        SESSION_SECRET: test_session_secret
         NODE_ENV: test
-
+        
   build:
     runs-on: ubuntu-latest
+    needs: test
     
     steps:
-    - uses: actions/checkout@v4
-    
+    - name: Checkout code
+      uses: actions/checkout@v4
+      
     - name: Setup Node.js
       uses: actions/setup-node@v4
       with:
-        node-version: '20'
+        node-version: '20.x'
         cache: 'npm'
-    
+        
     - name: Install dependencies
-      run: npm ci
-    
+      run: npm ci --ignore-scripts
+      
     - name: Build dashboard
       run: npm run build --workspace=@dismodular/dashboard
-    
-    - name: Generate Prisma Client
-      run: npx prisma generate
-    
-    - name: Check build artifacts
-      run: |
-        ls -la packages/dashboard/dist/
-        test -f packages/dashboard/dist/index.html
+      
+    - name: Upload build artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: dashboard-build
+        path: packages/dashboard/dist/
