--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
         cache: 'npm'
         
     - name: Install dependencies
-      run: npm ci --ignore-scripts
+      run: npm ci
       
     - name: Run linting
       run: npm run lint
@@ -53,7 +53,7 @@ jobs:
         cache: 'npm'
         
     - name: Install dependencies
-      run: npm ci --ignore-scripts
+      run: npm ci
       
     - name: Build dashboard
       run: npm run build --workspace=@dismodular/dashboard
