--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -10,7 +10,10 @@
     "dev": "node --env-file=../../.env --watch src/index.js",
     "start": "node src/index.js",
     "test": "node --test tests/",
-    "test:watch": "node --test --watch tests/"
+    "test:watch": "node --test --watch tests/",
+    "lint": "eslint src/ tests/ --ext .js",
+    "lint:fix": "eslint src/ tests/ --ext .js --fix",
+    "lint:ci": "eslint src/ tests/ --ext .js --max-warnings 0"
   },
   "dependencies": {
     "express": "^4.18.2",
