feat: update database configuration and enhance testing setup
- Added PostgreSQL port mapping in `docker-compose.yml` for local development.
- Updated `package.json` and `package-lock.json` to include Prisma version 6.17.1 and related dependencies.
- Modified `vitest.config.js` to use PostgreSQL connection strings for testing.
- Enhanced test setup to conditionally skip database operations in CI environments, improving test reliability.
- Refactored test database handling in `setup.js` to ensure proper client initialization and cleanup.

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@vitest/coverage-v8": "^1.0.0",
     "concurrently": "^8.2.2",
     "eslint": "^8.56.0",
+    "prisma": "^6.17.1",
     "supertest": "^6.3.3",
     "vitest": "^1.0.0"
   },
@@ -58,6 +59,7 @@
   },
   "dependencies": {
     "@aashari/nodejs-geocoding": "^2.7.2",
+    "@prisma/client": "^6.17.1",
     "express-rate-limit": "^8.1.0",
     "node-fetch": "^3.3.2"
   }
