--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: CI
+name: CI Tests
 
 on:
   push:
@@ -12,7 +12,7 @@ jobs:
     
     strategy:
       matrix:
-        node-version: [20.x, 21.x]
+        node-version: [20.x]
     
     steps:
     - name: Checkout code
@@ -27,39 +27,26 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
-    - name: Run linting
-      run: npm run lint
-      
+    - name: Generate Prisma client for tests
+      run: npx prisma generate --schema=prisma/schema.test.prisma
+      env:
+        DATABASE_URL: file:./test.db
+        
     - name: Run tests
       run: npm test
-      
-    - name: Run integration tests
-      run: npm run test:integration
       env:
+        CI: true
+        DATABASE_URL: file:./test.db
+        TEST_DATABASE_URL: file:./test.db
+        DISCORD_CLIENT_ID: test_client_id
+        DISCORD_CLIENT_SECRET: test_client_secret
+        DISCORD_CALLBACK_URL: http://localhost:3002/auth/discord/callback
+        SESSION_SECRET: test_session_secret
         NODE_ENV: test
         
-  build:
-    runs-on: ubuntu-latest
-    needs: test
-    
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
-      
-    - name: Setup Node.js
-      uses: actions/setup-node@v4
-      with:
-        node-version: '20.x'
-        cache: 'npm'
-        
-    - name: Install dependencies
-      run: npm ci
-      
-    - name: Build dashboard
-      run: npm run build --workspace=@dismodular/dashboard
-      
-    - name: Upload build artifacts
+    - name: Upload test results
       uses: actions/upload-artifact@v4
+      if: always()
       with:
-        name: dashboard-build
-        path: packages/dashboard/dist/
+        name: test-results
+        path: test-results.json
