--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,21 @@ jobs:
   test:
     runs-on: ubuntu-latest
     
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_USER: dismodular
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: dismodular_test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+    
     strategy:
       matrix:
         node-version: [20.x]
@@ -27,17 +42,24 @@ jobs:
     - name: Install dependencies
       run: npm ci
       
-    - name: Generate Prisma client for tests
-      run: npx prisma generate --schema=prisma/schema.test.prisma
+    - name: Generate Prisma client
+      run: npx prisma generate
       env:
-        DATABASE_URL: file:./test.db
+        CI: true
+        DATABASE_URL: postgresql://dismodular:password@localhost:5432/dismodular_test
+        
+    - name: Run database migrations
+      run: npx prisma db push
+      env:
+        CI: true
+        DATABASE_URL: postgresql://dismodular:password@localhost:5432/dismodular_test
         
     - name: Run tests
       run: npm test
       env:
         CI: true
-        DATABASE_URL: file:./test.db
-        TEST_DATABASE_URL: file:./test.db
+        DATABASE_URL: postgresql://dismodular:password@localhost:5432/dismodular_test
+        TEST_DATABASE_URL: postgresql://dismodular:password@localhost:5432/dismodular_test
         DISCORD_CLIENT_ID: test_client_id
         DISCORD_CLIENT_SECRET: test_client_secret
         DISCORD_CALLBACK_URL: http://localhost:3002/auth/discord/callback
