refactor: remove unused Prisma configuration and update database push commands
- Deleted the unused prisma.config.ts file to streamline project structure.
- Updated CI workflow and test setup to include the --accept-data-loss flag for database migrations, ensuring compatibility with schema changes.
- Enhanced authentication helper methods in integration tests for improved clarity and functionality.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -49,7 +49,7 @@ jobs:
         DATABASE_URL: postgresql://dismodular:password@localhost:5432/dismodular_test
         
     - name: Run database migrations
-      run: npx prisma db push
+      run: npx prisma db push --accept-data-loss
       env:
         CI: true
         DATABASE_URL: postgresql://dismodular:password@localhost:5432/dismodular_test
