--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,7 +36,7 @@ jobs:
           DATABASE_PATH: ":memory:"
       
       - name: Run integration tests
-        run: node --test tests/integration.test.js
+        run: npm run test:integration
         env:
           DISCORD_BOT_TOKEN: test_token
           DISCORD_CLIENT_ID: test_client_id
